Fix test and col width on mobile

--- a/projects/storefrontstyles/scss/components/myaccount/order-history/_replenishment-order-history.scss
+++ b/projects/storefrontstyles/scss/components/myaccount/order-history/_replenishment-order-history.scss
@@ -136,7 +136,7 @@
 
       @include media-breakpoint-down(sm) {
         @include type('8');
-        min-width: 50%;
+        min-width: 150px;
         margin-block-end: 10px;
       }
     }
